@@ -19,10 +19,10 @@ import static com.forgerock.sapi.gateway.dcr.models.ApiClientTest.createApiClien
 import static org.forgerock.json.JsonValue.field;
 import static org.forgerock.json.JsonValue.json;
 import static org.forgerock.json.JsonValue.object;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import java.net.URI;
-import java.net.URL;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
@@ -36,8 +36,8 @@ import org.forgerock.json.jose.jwt.JwtClaimsSet;
 import org.forgerock.util.promise.Promise;
 import org.junit.jupiter.api.Test;
 
-import com.forgerock.sapi.gateway.dcr.models.ApiClientTest;
 import com.forgerock.sapi.gateway.dcr.models.ApiClient;
+import com.forgerock.sapi.gateway.dcr.models.ApiClientTest;
 import com.forgerock.sapi.gateway.jwks.cache.BaseCachingJwkSetServiceTest.ReturnsErrorsJwkStore;
 import com.forgerock.sapi.gateway.jwks.mocks.MockJwkSetService;
 import com.forgerock.sapi.gateway.trusteddirectories.TrustedDirectory;
@@ -49,11 +49,11 @@ class DefaultApiClientJwkSetServiceTest {
     @Test
     void fetchJwkSetFromJwksUri() throws Exception {
         final JWKSet jwkSet = createJwkSet();
-        final URL jwksUri = new URL("https://directory.com/jwks/12345");
-        final MockJwkSetService jwkSetService = new MockJwkSetService(Map.of(jwksUri, jwkSet));
+        final URI jwkSetUri = URI.create("https://directory.com/jwks/12345");
+        final MockJwkSetService jwkSetService = new MockJwkSetService(Map.of(jwkSetUri, jwkSet));
         final ApiClientJwkSetService apiClientJwkSetService = new DefaultApiClientJwkSetService(jwkSetService);
 
-        fetchJwkSetFromJwksUri(jwkSet, jwksUri, apiClientJwkSetService);
+        fetchJwkSetFromJwksUri(jwkSet, jwkSetUri, apiClientJwkSetService);
     }
 
     @Test
@@ -65,9 +65,9 @@ class DefaultApiClientJwkSetServiceTest {
     }
 
     @Test
-    void failsIfJwkSetServiceThrowsException() throws Exception {
-        final URL jwksUri = new URL("https://directory.com/jwks/12345");
-        final ApiClient apiClient = ApiClientTest.createApiClientWithJwksUri(jwksUri.toURI());
+    void failsIfJwkSetServiceThrowsException() {
+        final URI jwkSetUri = URI.create("https://directory.com/jwks/12345");
+        final ApiClient apiClient = ApiClientTest.createApiClientWithJwksUri(jwkSetUri);
         final TrustedDirectory trustedDirectory = new TrustedDirectoryOpenBankingTest();
 
         // Returns an Exception promise on every call
@@ -78,20 +78,6 @@ class DefaultApiClientJwkSetServiceTest {
         final FailedToLoadJWKException exception = assertThrows(FailedToLoadJWKException.class,
                 () -> jwkSetPromise.getOrThrow(1, TimeUnit.MILLISECONDS));
         assertEquals("getJwkSet failed", exception.getMessage());
-    }
-
-    @Test
-    void failsIfJwksUriIsInvalid() throws Exception {
-        final ApiClient apiClient = ApiClientTest.createApiClientWithJwksUri(new URI("foo://bar"));
-        final TrustedDirectory trustedDirectory = new TrustedDirectoryOpenBankingTest();
-
-        final JwkSetService errorsJwkStore = new ReturnsErrorsJwkStore();
-        final ApiClientJwkSetService apiClientJwkSetService = new DefaultApiClientJwkSetService(errorsJwkStore);
-
-        final Promise<JWKSet, FailedToLoadJWKException> jwkSetPromise = apiClientJwkSetService.getJwkSet(apiClient, trustedDirectory);
-        final FailedToLoadJWKException exception = assertThrows(FailedToLoadJWKException.class,
-                () -> jwkSetPromise.getOrThrow(1, TimeUnit.MILLISECONDS));
-        assertEquals("Malformed jwksUri", exception.getMessage());
     }
 
     @Test
@@ -109,11 +95,11 @@ class DefaultApiClientJwkSetServiceTest {
     }
 
     @Test
-    void failsToGetJwksFromSoftwareStatementIfTrustedDirectorySoftwareStatementJwksClaimNameIsMissing() throws Exception {
+    void failsToGetJwksFromSoftwareStatementIfTrustedDirectorySoftwareStatementJwksClaimNameIsMissing() {
         final JwkSetService errorsJwkStore = new ReturnsErrorsJwkStore();
         final ApiClientJwkSetService apiClientJwkSetService = new DefaultApiClientJwkSetService(errorsJwkStore);
         final JWKSet jwkSet = createJwkSet();
-        final URL secureApiGatewayJwksURI = new URL("https://blah.com");
+        final URI secureApiGatewayJwksURI = URI.create("https://blah.com");
         final TrustedDirectory misconfiguredDirectory = new TrustedDirectorySecureApiGateway(secureApiGatewayJwksURI) {
             @Override
             public String getSoftwareStatementJwksClaimName() {
@@ -130,11 +116,11 @@ class DefaultApiClientJwkSetServiceTest {
     }
 
     @Test
-    void failsToGetJwksFromSoftwareStatementIfClaimIsNull() throws Exception {
+    void failsToGetJwksFromSoftwareStatementIfClaimIsNull() {
         final ReturnsErrorsJwkStore errorsJwkStore = new ReturnsErrorsJwkStore();
         final ApiClientJwkSetService apiClientJwkSetService = new DefaultApiClientJwkSetService(errorsJwkStore);
         final JWKSet jwkSet = createJwkSet();
-        final URL secureApiGatewayJwksURI = new URL("https://blah.com");
+        final URI secureApiGatewayJwksURI = URI.create("https://blah.com");
         final TrustedDirectory misconfiguredDirectory = new TrustedDirectorySecureApiGateway(secureApiGatewayJwksURI);
         final ApiClient apiClient = createApiClientWithSoftwareStatementJwks(jwkSet,null);
 
@@ -146,10 +132,10 @@ class DefaultApiClientJwkSetServiceTest {
     }
 
     @Test
-    void failsToGetJwksFromSoftwareStatementIfClaimsIsInvalidJwksJson() throws Exception {
+    void failsToGetJwksFromSoftwareStatementIfClaimsIsInvalidJwksJson() {
         final ReturnsErrorsJwkStore errorsJwkStore = new ReturnsErrorsJwkStore();
         final ApiClientJwkSetService apiClientJwkSetService = new DefaultApiClientJwkSetService(errorsJwkStore);
-        final URL secureApiGatewayJwksURI = new URL("https://blah.com");
+        final URI secureApiGatewayJwksURI = URI.create("https://blah.com");
         final TrustedDirectory misconfiguredDirectory = new TrustedDirectorySecureApiGateway(secureApiGatewayJwksURI);
 
         final JwtClaimsSet claimsSet = new JwtClaimsSet();
@@ -168,8 +154,8 @@ class DefaultApiClientJwkSetServiceTest {
                           RestJwkSetServiceTest.createJWK(UUID.randomUUID().toString())));
     }
 
-    private void fetchJwkSetFromJwksUri(JWKSet expectedJwkSet, URL jwksUri, ApiClientJwkSetService apiClientJwkSetService) throws Exception {
-        final ApiClient apiClient = ApiClientTest.createApiClientWithJwksUri(jwksUri.toURI());
+    private void fetchJwkSetFromJwksUri(JWKSet expectedJwkSet, URI jwksUri, ApiClientJwkSetService apiClientJwkSetService) throws Exception {
+        final ApiClient apiClient = ApiClientTest.createApiClientWithJwksUri(jwksUri);
         // OB Trusted Dir uses the jwksUri
         final TrustedDirectory trustedDirectory = new TrustedDirectoryOpenBankingTest();
         invokeFilterAndValidateSuccessResponse(expectedJwkSet, apiClient, trustedDirectory, apiClientJwkSetService);
@@ -178,7 +164,7 @@ class DefaultApiClientJwkSetServiceTest {
     private void fetchJwkSetFromSoftwareStatement(ApiClientJwkSetService apiClientJwkSetService) throws Exception {
         final JWKSet jwkSet = createJwkSet();
         // SAPI-G directory uses the software statement jwks
-        final URL secureApiGatewayJwksURI = new URL("https://blah.com");
+        final URI secureApiGatewayJwksURI = URI.create("https://blah.com");
         final TrustedDirectory trustedDirectory = new TrustedDirectorySecureApiGateway(secureApiGatewayJwksURI);
         final ApiClient apiClient = createApiClientWithSoftwareStatementJwks(jwkSet, trustedDirectory.getSoftwareStatementJwksClaimName());
 
